---修改深度页面

--- a/jhj-web-user/order/deepIntro/order-deep-intro-52.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-52.html
@@ -4,8 +4,7 @@
         <p>服务介绍</p>
     </div>
     <p class="special-color1">温馨提示：</p>
-    <p class="special-color1">1.由于每位顾客对地板蜡的质量要求不一样，所以我们提供的
-        地板打蜡服务不包含蜡，地板蜡请顾客自备</p>
+    <p class="special-color1">1.地板保养打蜡我们提供地板蜡，如您需要使用您自己的地板蜡，可在服务前和服务人员说明</p>
     <p class="special-color1">2.地板打蜡20平米起，不足20平米按20平米计算</p>
 </div>
 
