--- a/jhj-web-user/order/deepIntro/order-deep-intro-54.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-54.html
@@ -1,4 +1,13 @@
 <div class="shendu-bx">
+	<div class="shendu-title" style="clear:both;margin-top:10px;">
+		<div class="shendu-title-1"></div>
+		<p>服务介绍</p>
+	</div>
+	<p class="special-color1">温馨提示：</p>
+	<p class="special-color1">1.10平米起，不足10平米按10平米计算，玻璃面积（含窗框）以实际测量面积为准。</p>
+	<p class="special-color1">2.用户可自行测量后下单，待服务员上门服务前准确测量后再进行服务，差出部分多退少补。</p>
+</div>
+<div class="shendu-bx">
     <div class="shendu-title" style="clear:both;margin-top:10px;">
         <div class="shendu-title-1"></div>
         <p>服务流程</p>
