--- a/jhj-web-user/order/deepIntro/order-deep-intro-56.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-56.html
@@ -4,7 +4,7 @@
         <p>服务介绍</p>
     </div>
     <p class="special-color1">温馨提示：</p>
-    <p class="special-color1">1.新居开荒包含新房装修及二手房新装修用户，过年大扫除和租房大扫除请点击<a href="order-shendu-fangwu.html" style="font-size:14px;">房屋大扫除</a></p>
+    <p class="special-color1">1.新居开荒包含新房装修及二手房新装修用户，过年大扫除和租房大扫除请点击<a href="order/order-deep-intro.html?service_type_id=53" style="font-size:14px;">房屋大扫除</a></p>
     <p class="special-color1">2.新居开荒按照建筑面积计算，服务开始前请您出示相关的房屋建筑面积证明</p>
     <p class="special-color1">3.新居开荒60平米起，不足60平米按60平米收费</p>
     <p class="special-color1">4.本服务包含擦玻璃服务，不包含地板打蜡服务</p>
