--- a/jhj-web-user/order/order-baby-intro.html
+++ b/jhj-web-user/order/order-baby-intro.html
@@ -140,77 +140,77 @@
                     </a>
 
                     <div class="main-yunfu-mukuai">
-                        <ul class="main-yunfu-mukuai32">
-                            <p>套餐介绍</p>
-                            <li><h5 style="margin-left:20%;">服务项目</h5></li>
-
-                            <li><h5 style="background:#B6A9D4;margin-left:20%;">包月套餐</h5></li>
-                        </ul>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>零污染孕期保洁</li>
-                            <li>4次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>厨房高温消毒杀菌</li>
-                            <li>4次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>卫生间高温消毒除菌</li>
-                            <li>4次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>空调滤网清洗(最多3个)</li>
-                            <li>1次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>纱窗清洗</li>
-                            <li>2次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>床铺除螨杀菌(最多3个)</li>
-                            <li>1次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>窗帘高温杀菌(最多3个)</li>
-                            <li>1次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>沙发除螨杀菌(最多3组)</li>
-                            <li>1次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>墙、棚掸尘</li>
-                            <li>2次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>全方位吸尘(地面地毯门垫、窗槽、窗帘、沙发)</li>
-                            <li>2次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li style="clear:both;">地漏下水口深度清理</li>
-                            <li>1次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li>常用常接触物品除菌消毒(手机、电脑、ipad、遥控器、拖鞋、开关、门把手)等</li>
-                            <li>4次</li>
-                        </ul>
-                        <div class="main-yunfu-mukuai34"></div>
-                        <ul class="main-yunfu-mukuai33">
-                            <li></li>
-                            <li style="color:#F2436A;">1999元</li>
-                        </ul>
-                    </div>
+						<ul class="main-yunfu-mukuai32">
+							<p>套餐介绍</p>
+							<li><h5 style="margin-left:20%;">服务项目</h5></li>
+							
+							<li><h5 style="background:#B6A9D4;margin-left:20%;">数量</h5></li>
+						</ul>
+						<ul class="main-yunfu-mukuai33">
+							<li>零污染孕期保洁</li>
+							<li>1次</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>厨房高温消毒杀菌</li>
+							<li>1间</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>卫生间高温消毒除菌</li>
+							<li>1间</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>空调滤网清洗</li>
+							<li>2台</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>纱窗清洗</li>
+							<li>2-3间</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>床铺除螨杀菌</li>
+							<li>最多3张</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>窗帘高温杀菌</li>
+							<li>最多3间</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>沙发除螨杀菌(最多3组)</li>
+							<li>最多3组</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>墙、棚掸尘</li>
+							<li>全屋</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>全方位吸尘(地面地毯门垫、窗槽、窗帘、沙发)</li>
+							<li>全屋</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li style="clear:both;">地漏下水口深度清理</li>
+							<li>1次</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li>常用常接触物品除菌消毒(手机、电脑、ipad、遥控器、拖鞋、开关、门把手)等</li>
+							<li>1次</li>
+						</ul>
+						<div class="main-yunfu-mukuai34"></div>
+						<ul class="main-yunfu-mukuai33">
+							<li></li>
+							<li style="color:#F2436A;">999元</li>
+						</ul>
+					</div>
 
                     <div class="main-yunfu-mukuai">
                         <ul class="main-yunfu-mukuai32">
