--- a/jhj-web-user/order/deepIntro/order-deep-intro-35.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-35.html
@@ -1,4 +1,12 @@
 <div class="shendu-bx">
+	<div class="shendu-title" style="clear:both;margin-top:10px;">
+		<div class="shendu-title-1"></div>
+		<p>服务介绍</p>
+	</div>
+	<p class="special-color1">温馨提示：</p>
+	<p class="special-color1">厨房清洁不包含清洗油烟机，只清理油烟机表面</p>
+</div>
+<div class="shendu-bx">
     <div class="shendu-title" style="clear:both;margin-top:10px;">
         <div class="shendu-title-1"></div>
         <p>服务内容</p>
