--- a/jhj-web-user/order/deepIntro/order-deep-intro-50.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-50.html
@@ -1,4 +1,12 @@
 <div class="shendu-bx">
+	<div class="shendu-title" style="clear:both;margin-top:10px;">
+		<div class="shendu-title-1"></div>
+		<p>服务介绍</p>
+	</div>
+	<p class="special-color1">温馨提示：</p>
+	<p class="special-color1">冰箱清洗前需断电停机，清洗前需要把冰箱内的食品全部搬出清空。</p>
+</div>
+<div class="shendu-bx">
     <div class="shendu-title" style="clear:both;margin-top:10px;">
         <div class="shendu-title-1"></div>
         <p>服务内容</p>
