--- a/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
+++ b/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
@@ -30,7 +30,7 @@
                         <p>服务介绍</p>
                     </div>
                     <p class="special-color1">温馨提示：</p>
-                    <p class="special-color1">1.家务包月套餐中单次服务内容请参考<a href="order-jinpai.html"
+                    <p class="special-color1">1.家务包月套餐中单次服务内容请参考<a href="order/order-hour-intro.html"
                                                                    style="font-size:14px;">金牌保洁</a></p>
                     <p class="special-color1">2.包月套餐按照一月4次，每周1次的时间规律服务，不接受延期使用，请知晓</p>
                 </div>
