--调试选择日期不能转换为时间戳

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -176,7 +176,7 @@
 	</div>
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	<!-- 时间戳类库 -->
-	<script type="text/javascript" src="js/lib/moment-with-locales.min.js"></script>
+	<script type="text/javascript" src="js/lib/moment.min.js"></script>
 	<!-- 公共类库-->
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/login.js"></script>
