-- 补交差价的改动

--- a/jhj-web-user/order/order-pay-ext.html
+++ b/jhj-web-user/order/order-pay-ext.html
@@ -15,7 +15,7 @@
 				</ul>
 				<ul class="order-dingdan-chajia1">
 					<li>服务员：</li>
-					<li id="staffNames"></li>
+					<li>{{staffNames}}</li>
 				</ul>
 				<div id="orderPriceExtSumbit" class="all-button1" style="background: #FDD855; margin-top: 40px;">确认支付</div>
 				<div style="clear: both; height: 15px;"></div>
