--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -46,7 +46,7 @@
 									<div class="mincircle-one">
 										<p>深度养护</p>
 										<p>开荒，擦玻璃</p>
-										<p>满减50元</p>
+										<p>油烟机清洗</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-2.png" alt="">
