--- a/jhj-web-user/order/deepIntro/order-deep-intro-36.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-36.html
@@ -17,7 +17,7 @@
     <p>1.清洗油烟机可极大提高或恢复电器能力，节省耗电，避免电力浪费，延长电器使用寿命</p>
     <p>2.经常清洗油烟机有助于预防疾病和细菌。烹饪时都会释放出一些呈黑色状的油烟，长期
         吸入会对人的身体造成危害</p>
-    <p>3.油烟机建议每半年清洗一次</p>
+    <p>3.油烟机建议每季度清洗一次</p>
 </div>
 
 <div class="shendu-bx">
