--- a/jhj-web-user/user/agreement.html
+++ b/jhj-web-user/user/agreement.html
@@ -11,12 +11,10 @@
                             <叮当到家>平台,成为我们的会员,共同致力于让美好生活不再有家务之忧。
                         </p>
                         <p>
-                            <叮当到家>是以家政服务为入口的个性化家庭服务定制平台。通过递进式、团队式、主动式、定制式服务，为中高端家庭提供全年服务套餐，满足家庭服务个性化诉求。
+                            <叮当到家>是针对细分人群提供的个性化家庭服务平台。为孕婴群体、老年群体、有品质生活群体等细分人群提供差异化的家政服务品类。
                         </p>
-                        <p>
-                            <叮当到家>
-                                致力于让美好生活不再有家务之忧。通过移动平台、主云门店系统、家庭助理团队三位一体的三角业务模式，提供较为全面的服务品类，能够基本涵盖各项家庭需求，通过一键订制和主动式服务，全年即可享受按时按需服务，坐享服务到家，让您真正实现轻松自在的生活方式。
-                        </p>
+                        <p>公司在业内首个实施，以通过“移动平台+主云门店系统+服务团队”三位一体的三角业务模式，为中高端家庭用户量身打造个性化服务，包含家务定制、母婴到家、老年到家，基本涵盖各项家庭需求，是家庭专属的家务助手。</p>
+                        <p>公司对服务人员进行持久的服务素质培养，通过礼仪培训、技能培训等，保障服务人员具有较高的行业服务水准。</p>   
                     </div>
 
                     <div class="card-content-inner abouts1">
@@ -47,7 +45,7 @@
                         <p>
                             2、《叮当到家》将根据服务订单信息访寻到可以提供服务的服务人员，并促成服务人员与用户之间按照用户在服务订单中的具体需求达成服务合同。服务人员与用户之间达成服务合同后，《叮当到家》与用户之间的服务协议终止。</p>
                         <p>3、如服务订单无法履行（例如无法访寻到适合用户需求的服务人员的），我们将尽快与您联系并在获得您的许可后取消服务订单。</p>
-                        <p>4服务人员履行完毕其与用户达成的服务合同后，用户应当按照双方之间达成的家政服务协议向服务人员支付服务价款。用户可作出相应的评价，以供叮当到家进一步改进服务。</p>
+                        <p>4、服务人员履行完毕其与用户达成的服务合同后，用户应当按照双方之间达成的家政服务协议向服务人员支付服务价款。用户可作出相应的评价，以供叮当到家进一步改进服务。</p>
                     </div>
 
                     <div class="card-content-inner abouts1">
