--- a/jhj-web-user/user/aboutus.html
+++ b/jhj-web-user/user/aboutus.html
@@ -8,9 +8,9 @@
                 <div class="card-content">
                     <div class="card-content-inner abouts1">
                         <p class="special-color6">1.公司介绍</p>
-                        <p>叮当到家是以提供家务包年的服务形式，通过个性化家庭服务定制平台，以一键定制、全年即可享受按时按需的包年服务，坐享服务到家，让家庭远离家务。</p>
+                        <p>叮当到家是针对细分人群提供的个性化家庭服务平台。为孕婴群体、老年群体、有品质生活群体等细分人群提供差异化的家政服务品类。</p>
                         <p>
-                            公司在业内首个实施，以通过“移动平台+主云门店系统+家庭助理团队”三位一体的三角业务模式，为中高端家庭用户提供品类齐全的服务，包含家政服务包、贴心家事包、超值免费包，基本涵盖各项家庭需求，是家庭专属的家务助手。</p>
+                           公司在业内首个实施，以通过“移动平台+主云门店系统+服务团队”三位一体的三角业务模式，为中高端家庭用户量身打造个性化服务，包含家务定制、母婴到家、老年到家，基本涵盖各项家庭需求，是家庭专属的家务助手。</p>
                         <p>公司对服务人员进行持久的服务素质培养，通过礼仪培训、技能培训等，保障服务人员具有较高的行业服务水准。</p>
                         <p>与现有家政相比，整体上具有明显差异化优势：</p>
                         <p>变被动服务为主动服务</p>
@@ -21,19 +21,19 @@
                     </div>
 
                     <div class="card-content-inner abouts1">
-                        <p class="special-color6">2.我们的优势</p>
+                        <p class="special-color6">2.企业优势</p>
                         <p>主动</p>
                         <p>不用您一次次的预约，</p>
                         <p>我们提供月/年的家庭服务套餐。</p>
+                        <p>个性</p>
+                        <p>不用您一遍遍要求，</p>
+                        <p>我们提供更适合您的差异化服务。</p>
                         <p>团队</p>
                         <p>不用您一个个的更换，</p>
                         <p>我们提供全能的家庭助理团队。</p>
                         <p>匠心</p>
                         <p>不用您一项项的检查，</p>
                         <p>我们始终追求极致的工匠精神。</p>
-                        <p>安全</p>
-                        <p>不用您一回回的担忧，</p>
-                        <p>我们提供服务/财产/安全三大保障。</p>
                     </div>
 
                     <div class="card-content-inner abouts1">
@@ -41,8 +41,9 @@
                         <p>金牌保洁：专业保洁·专属服务</p>
                         <p>厨娘烧饭：家常菜·家乡味</p>
                         <p>深度养护：高水平·高标准</p>
-                        <p>贴心家事：托管·跑腿·代办·陪伴</p>
-                        <p>企业服务：企业保洁·团餐</p>
+                        <p>家务定制：需求预设•自动响应</p>
+                        <p>老年到家：专业护理•身体介护</p>
+                        <p>母婴到家：呵护母婴•拥有健康居家环境</p>
                     </div>
                 </div>
             </div>
