--- a/jhj-web-user/order/deepIntro/order-deep-intro-53.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-53.html
@@ -4,7 +4,7 @@
         <p>服务介绍</p>
     </div>
     <p class="special-color1">温馨提示：</p>
-    <p class="special-color1">1.房屋大扫除包含换季、过年大扫除和租房大扫除，新装修房屋请点击<a href="order/order-deep-intro.html?service_type_id=56" style="font-size:14px;">新居开荒</a></p>
+    <p class="special-color1">1.房屋大扫除包含换季、过年大扫除和租房大扫除，新装修房屋请参考新居开荒</p>
     <p class="special-color1">2.房屋大扫除按照建筑面积计算，服务开始前请您出示相关的房屋建筑面积证明</p>
     <p class="special-color1">3.房屋大扫除60平米起，不足60平米按60平米收费</p>
     <p class="special-color1">4.本服务包含擦玻璃服务，不包含地板打蜡服务</p>
