---充值添加员工推荐码

--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -35,6 +35,16 @@
 							</div>
 						</div>
 					</li>
+					<li class="pay-li">
+						<div class="item-content">
+							<div class="item-inner">
+								<div class="item-title label">推荐码:</div>
+								<div class="item-xx">
+									<input name="staff_code" id="staffCode"/>
+								</div>
+							</div>
+						</div>
+					</li>
 				</ul>
 			</form>
 			<p class="fangshiwenzi">支付方式</p>
