---修改金牌保洁页面

--- a/jhj-web-user/order/order-hour-intro.html
+++ b/jhj-web-user/order/order-hour-intro.html
@@ -9,15 +9,15 @@
 				<div class="shendu-bx-xd">
 					<ul class="shendu-bx-xd1">
 						<li>类别</li>
-						<li>原价</li>
-						<li>折扣价</li>
+						<li>促销价</li>
+						<li>会员价</li>
 					</ul>
 					<ul class="shendu-bx-xd11">
 						<li>金牌保洁</li>
-						<li>199元/3小时</li>
 						<li>149元/3小时</li>
+						<li>135元/3小时</li>
 					</ul>
-					<div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">充值立享更多优惠&nbsp;》</a></div>
+					<div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">充值立享会员价优惠&nbsp;》</a></div>
 				</div>
 			</div>
 			<div class="shendu-bx">
@@ -29,6 +29,39 @@
 				<p class="special-color1">1.金牌保洁3个小时起步，如服务超时将按照50元/小时收费</p>
 				<p class="special-color1">2.服务员自带消过毒的5色抹布、清洁剂和清洁工具</p>
 				<p class="special-color1">3.高温消毒后台盆、墙面会有部分水珠残留，属正常现象</p>
+			</div>
+			<div class="shendu-bx">
+				<div class="shendu-title" style="clear:both;margin-top:10px;">
+					<div class="shendu-title-1"></div>
+					<p>参考时间</p>
+				</div>
+				<div class="shendu-cankaotime">
+					<div class="shendu-cankaotime1">建筑面积(㎡)</div>
+					<div class="shendu-cankaotime2">参考时长(按单人次计算)</div>
+				</div>
+				<div class="shendu-cankaotime">
+					<div class="shendu-cankaotime11">60平米内</div>
+					<div class="shendu-cankaotime22">3小时起</div>
+				</div>
+				<div class="shendu-cankaotime">
+					<div class="shendu-cankaotime11">60-90平米</div>
+					<div class="shendu-cankaotime22">3-4小时起</div>
+				</div>
+				<div class="shendu-cankaotime">
+					<div class="shendu-cankaotime11">90-120平米</div>
+					<div class="shendu-cankaotime22">4-5小时起</div>
+				</div>
+				<div class="shendu-cankaotime">
+					<div class="shendu-cankaotime11">120-140平米</div>
+					<div class="shendu-cankaotime22">5-6小时起</div>
+				</div>
+				<div class="shendu-cankaotime">
+					<div class="shendu-cankaotime11">140平米以上</div>
+					<div class="shendu-cankaotime22">6小时以上</div>
+				</div>
+				<p class="special-color1" style="clear:both;">温馨提示：</p>
+				<p class="special-color1">1.参考时间与居室物品数量，清洁程度有关具体以实际情况为准</p>
+				<p class="special-color1">2.请根据您的居室情况预定所需服务时间和服务人数</p>
 			</div>
 			<div class="xiantiao"></div>
 			<div class="jinpai">
