---预订页面修改

--- a/jhj-web-user/html/order-waiter-yuding.html
+++ b/jhj-web-user/html/order-waiter-yuding.html
@@ -41,6 +41,7 @@
 									<span>－</span>
 									<input type="text" value="0">
 									<span>＋</span>
+									<div class="waiter6-1-2">小时</div>
 								</div>
 								<div class="waiter6-1">
 									<img src="../img/yudingayi/waiter-2.png" alt="">
@@ -48,6 +49,8 @@
 									<span>－</span>
 									<input type="text" value="0">
 									<span>＋</span>
+									<div class="waiter6-1-2">小时</div>
+
 								</div>
 								<ul class="order-pay">
 									<li>选择地址</li>
