-- 金牌保洁支持自动多人派工   -- 金牌保洁后台下单支持多人派工

--- a/jhj-web-user/html/order-pay-rili.html
+++ b/jhj-web-user/html/order-pay-rili.html
@@ -32,14 +32,14 @@
 									<div class="waiter6-1-1">预约服务人员数量</div>
 									<span>－</span>
 									<input type="text" value="0">
-									<span>＋</span>
+									<span>＋</span>位
 								</div>
 								<div class="waiter6-1">
 									<img src="../img/yudingayi/waiter-2.png" alt="">
 									<div class="waiter6-1-1">预约服务时间</div>
 									<span>－</span>
 									<input type="text" value="0">
-									<span>＋</span>
+									<span>＋</span>小时
 								</div>
 							</div>
 							<div class="waiter9">金额：<span>500元</span></div>
