--- a/jhj-web-user/order/order-hour-choose.html
+++ b/jhj-web-user/order/order-hour-choose.html
@@ -5,6 +5,28 @@
 				<input type="hidden" name="serviceType" id="serviceType" value="28">
 				<input type="hidden" id="addrId" name="addrId" value="">
 				<div class="beijing-index">
+					<div class="waiter6" style="margin: 0;">
+						<div class="waiter6-1">
+							<img src="img/yudingayi/waiter-1.png" alt="">
+							<div class="waiter6-1-1">预约服务人员数量</div>
+							<span onclick="onStaffNumsSub()">－</span>
+							<input type="text" id="staffNums" onkeyup="setOrderHourTotal()" onafterpaste="setOrderHourTotal()" maxLength="2" autocomplete="off" value="1">
+							<span onclick="onStaffNumsAdd()">＋</span>
+							<div class="waiter6-1-2">位</div>
+						</div>
+						<div class="waiter6-1">
+							<img src="img/yudingayi/waiter-2.png" alt="">
+							<div class="waiter6-1-1">预约服务时间</div>
+							<span onclick="onServiceHoursSub()">－</span>
+							<input type="text" id="serviceHours" onkeyup="setOrderHourTotal()" onafterpaste="setOrderHourTotal()" maxLength="2" autocomplete="off" value="3">
+							<span onclick="onServiceHoursAdd()">＋</span>
+							<div class="waiter6-1-2">小时</div>
+						</div>
+					</div>
+					<div class="waiter9">
+						金额：
+						<span id="orderHourPayStr">149元</span>
+					</div>
 					<ul class="order-pay">
 						<li>选择地址</li>
 					</ul>
@@ -14,25 +36,26 @@
 								<li>
 									<img src="img/rili/zuobiao.png" alt="">
 								</li>
-									<li style="width: 60%;">
-										<div style="width: 30%; height: 60px; float: left;">地址：</div>
-										<label id="orderChooseAddrName" class="tarea1"></label>
-									</li>
+								<li style="width: 60%;">
+									<div style="width: 30%; height: 60px; float: left;">地址：</div>
+									<label id="orderChooseAddrName" class="tarea1"></label>
+								</li>
 								<li style="width: 20%;">
 									<img src="img/rili/tianxie.png" alt="">
 								</li>
 							</ul>
 						</a>
 					</div>
-					
 					<ul class="order-pay">
 						<li>选择上门服务时间</li>
 					</ul>
 					<a href="#" id="chooseServiceTime" class="special-color7">
-					<ul class="chose-time" style="background:#fff;">
-						<li class="special-color3"></li>
-						<li><img src="img/rili/zuobiao1.png" alt=""></li>
-					</ul>
+						<ul class="chose-time" style="background: #fff;">
+							<li class="special-color3"></li>
+							<li>
+								<img src="img/rili/zuobiao1.png" alt="">
+							</li>
+						</ul>
 					</a>
 				</div>
 			</form>
