--- a/jhj-web-user/order/order-hour-confirm.html
+++ b/jhj-web-user/order/order-hour-confirm.html
@@ -8,6 +8,7 @@
 				<input type="hidden" id="orderFrom" name="orderFrom" value="1">
 				<input type="hidden" id="serviceContent" name="serviceContent" value="">
 				<input type="hidden" id="serviceHour" name="serviceHour" value="3">
+				<input type="hidden" id="staffNums" name="staffNums" value="1">
 				<input type="hidden" id="serviceAddons" name="serviceAddons" value="">
 				<input type="hidden" id="addrId" name="addrId" value="">
 				<input type="hidden" id="serviceDate" name="serviceDate" value="0">
@@ -72,7 +73,7 @@
 					</div>
 					<div class="order-xiadan">
 						<ul class="xiadan2">
-							<li class="special-color3" id="orderPayStr"></li>
+							<li class="special-color3" id="orderHourPayStr"></li>
 						</ul>
 						<ul class="xiadan3">
 							<a href="#" id="orderHourSubmit">
