---修改充值页面

--- a/jhj-web-user/user/charge/mine-charge-pay-success.html
+++ b/jhj-web-user/user/charge/mine-charge-pay-success.html
@@ -1,18 +1,13 @@
-
-<div class="pages">
-	<!-- Page, data-page contains page name-->
-	<div data-page="charge-pay-success-page" class="page"style="background:#F8F8F8;">
-		<!-- Scrollable page content-->
-		<div class="page-content">
-
-			<div class="ddjg-input" style="text-align:center">
-                <img src="img/icons/duigou-x.png" />
-            </div>
-            <ul class=ddjg-xq>
-            	<li>充值成功!</li>
-            	<li>你的余额为:<span id="rest_money"></span>元</li>
-          </ul>
-			<a href="#" id="charge-pay-success-btn" class="button  active my-submit">返回</a>
-		</div>
-	</div>
+<div data-page="charge-pay-success-page" class="page">
+    <div id="indexPageContentDiv" class="page-content" style="background:#fff;">
+        <div class="beijing-index" style="background:#fff;">
+            <img src="img/youhuiquan/23.png" alt="" style="width:40%;margin-left:30%;margin-top:50px;">
+            <img src="img/youhuiquan/24.png" alt="" style="width:20%;margin-left:40%;margin-top:10px;">
+            <ul class="chongzhi-finesh">
+                <li>充值成功</li>
+                <li>恭喜您成为金牌会员</li>
+            </ul>
+            <div class="all-button12"><a href="user/mine.html">返回</a></div>
+        </div>
+    </div>
 </div>
