--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -16,6 +16,7 @@
                 <img src="img/youhuiquan/3.png" alt="">
                 <img src="img/youhuiquan/4.png" alt="">
                 <img src="img/youhuiquan/5.png" alt="">
+                <div class="chongzhi5-kong1"></div>
             </div>
             {{/js_compare}}
             {{#js_compare "this.card_pay==2000"}}
@@ -26,6 +27,7 @@
                 <img src="img/youhuiquan/9.png" alt="">
                 <img src="img/youhuiquan/10.png" alt="">
                 <img src="img/youhuiquan/11.png" alt="">
+                <div class="chongzhi5-kong1"></div>
             </div>
             {{/js_compare}}
             {{#js_compare "this.card_pay==3000"}}
@@ -41,8 +43,10 @@
                 <img src="img/youhuiquan/20.png" alt="">
                 <img src="img/youhuiquan/21.png" alt="">
                 <img src="img/youhuiquan/22.png" alt="">
+                <div class="chongzhi5-kong1"></div>
             </div>
             {{/js_compare}}
+            
             <div class="order-xiadan">
                 <ul class="xiadan2">
                     <li id="card_pay_view" class="special-color3">{{this.card_pay}}<b>元</b></li>
