--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -4,7 +4,7 @@
             <div class="chongzhi">
                 <p>充值账户：<span id="mobile"></span></p>
                 <p>支付方式：<span>微信支付</span></p>
-                <p>推荐人号码：<sapn><input name="staffCode" id="staffCode" /></span></p>
+                <p>推荐人号码：<sapn><input name="staffCode" id="staffCode"  placeholder=""/></span></p>
             </div>
             <div class="chongzhi1">
                 <p>赠送优惠券</p>
