---我的评价页面

--- a/jhj-web-user/html/order-waiter-pingjia-wancheng.html
+++ b/jhj-web-user/html/order-waiter-pingjia-wancheng.html
@@ -63,6 +63,7 @@
 									<span>自信，耐心，勤奋</span>
 								</div>
 								<div class="all-button14">预约她</div>
+								<div class="chongzhi5-kong1"></div>
 							</div>
 							<div class="waiter8">
 								<div class="waiter8-1">她收到的评价</div>
