--- a/jhj-web-user/user/user-coupons.html
+++ b/jhj-web-user/user/user-coupons.html
@@ -1,24 +1,19 @@
-
 <div data-page="mine-coupons-list" class="page">
-	<div id="indexPageContentDiv" class="page-content">
-		{{#each data}}
-		<div class="beijing-index">
-			<div class="youhuiquan">
-				
-				<div class="youhuiquan-num">￥{{value}}</div>
-				<div class="youhuiquan-tiaojian">消费满{{max_value}}元可用</div>
-				<div class="all-button6 special-color4" id="mine-coupons-use">
-				<input type="hidden" name="user_coupon_id" id="user_coupon_id" value="{{id}}" />
-				<input type="hidden" name="order_type" id="order_type" value="{{service_type}}" />
-				<input type="hidden" name="max_value" id="max_value" value="{{max_value}}" />
-				<input type="hidden" name="user_coupon_value" id="user_coupon_value" value="{{value}}" />
-				<input type="hidden" name="coupons_type_id" id="coupons_type_id" value="{{coupons_type_id}}" />
-				立即使用
-				</div>
-				<div class="youhuiquan-youxiaoqi">有效日期：{{to_date_str}}</div>
-				<div class="youhuiquan-youxiaoqi1">使用说明：{{coupons_type_desc}}</div>
-			</div>
-		</div>
-		{{/each}}
-	</div>
+    <div id="indexPageContentDiv" class="page-content">
+        <div class="beijing-index">
+            {{#each data}}
+            <div class="youhuiquan" id="mine-coupons-use">
+                <div class="youhuiquan1">￥</div>
+                <span>状态：<b id="isUse">可用</b></span>
+                <div class="youhuiquan2">{{value}}</div>
+                <p>{{service_type_name}}</p>
+                <div class="youhuiquan3">有效期至:{{to_date_str}}</div>
+                <input type="hidden" name="user_coupon_id" id="user_coupon_id" value="{{id}}" />
+                <input type="hidden" name="service_type" id="service_type" class="service_type" value="{{service_type}}"/>
+                <input type="hidden" name="user_coupon_value" id="user_coupon_value" value="{{value}}" />
+                <input type="hidden" name="to_date" id="to_date"  value="{{to_date}}"/>
+            </div>
+            {{/each}}
+        </div>
+    </div>
 </div>
