--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -16,15 +16,23 @@
 								<li>{{rest_money_span}}</li>
 							</ul>
 							<ul id="mine-coupons">
-								<li><img src="img/order-my/my-3.png" alt=""></li>
+								<li><img src="img/order-my/my-12.png" alt=""></li>
 								<li>优惠券</li>
 								<li>{{total_coupon_span}}</li>
 							</ul>
 							
 							<ul>
-								<li><img src="img/order-my/my-4.png" alt=""></li>
-								<li>会员级别</li>
-								<li>普通会员</li>
+								{{#js_compare "this.is_vip==1"}}
+									<li><img src="img/order-my/my-14.png" alt=""></li>
+									<li>会员级别</li>
+									<li>金牌会员</li>
+								{{/js_compare}}
+								{{#js_compare "this.is_vip==0"}}
+									<li><img src="img/order-my/my-13.png" alt=""></li>
+									<li>会员级别</li>
+									<li>普通用户</li>
+								{{/js_compare}}
+								
 							</ul>
 						</div>
 						<div class="order-my2">
