--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -66,7 +66,7 @@
 								
 							</div>
 							<div class="mincircle mincircle3">
-								<a href="order/order-old-people.html">
+								<a href="order/order-old-index.html">
 									<div class="mincircle-one">
 										<p style="margin-bottom:0;">养老护工</p>
 										<p style="color:#000;">贴心家事</p>
