--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -211,6 +211,7 @@
 	<script type="text/javascript" src="js/order/order-baby-intro.js"></script>
 	<!-- 订单 -->
 	<script type="text/javascript" src="js/order/order-list.js"></script>
+	<script type="text/javascript" src="js/order/order-rate.js"></script>
 	<!-- 支付 -->
 	<script type="text/javascript" src="js/order/order-pay.js"></script>
 	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
