-- 微信版评价页面

--- a/jhj-web-user/order/order-rate.html
+++ b/jhj-web-user/order/order-rate.html
@@ -39,7 +39,7 @@
 				<div class="waiter2">
 					<textarea class="waiter2-1" id="rateContent"></textarea>
 				</div>
-				<div class="waiter3">
+				<!-- <div class="waiter3">
 					<div class="waiter3-1">
 						<img src="img/yudingayi/picture.png" alt="">
 						<p>添加删除图片</p>
@@ -51,7 +51,7 @@
 					<div class="waiter4-1">+</div>
 					<div class="waiter4-1">+</div>
 					<div class="waiter4-1">+</div>
-				</div>
+				</div> -->
 				<div class="waiter5">
 					<div class="all-button13" id="rateSubmit">提交评价</div>
 				</div>
