--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -212,6 +212,7 @@
 	<!-- 订单 -->
 	<script type="text/javascript" src="js/order/order-list.js"></script>
 	<script type="text/javascript" src="js/order/order-rate.js"></script>
+	<script type="text/javascript" src="js/order/order-rate-success.js"></script>
 	<!-- 支付 -->
 	<script type="text/javascript" src="js/order/order-pay.js"></script>
 	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
