--- a/jhj-web-user/order/order-rate-success.html
+++ b/jhj-web-user/order/order-rate-success.html
@@ -1,46 +1,49 @@
 
 <div data-page="order-rate-success" class="page">
 	<div id="indexPageContentDiv" class="page-content">
-		<div class="beijing-index">
+		<div id="staffRate" class="beijing-index">
+			
+		</div>
+		
+		
+		<div id="staffRateTemplate" style="display:none">
 			<div class="waiter7">
 				<div class="waiter7-1">
 					<p>服务员：</p>
-					<span>李久平</span>
+					<span>{staffName}</span>
 				</div>
 				<div class="waiter7-1">
 					<p>年龄：</p>
-					<span>34岁</span>
+					<span>{age}</span>
 				</div>
 				<div class="waiter7-1">
 					<p>技能等级：</p>
-					<span>中级</span>
+					<span>{skill}</span>
 				</div>
 				<div class="waiter7-1">
 					<p>籍贯：</p>
-					<span>河北唐山</span>
+					<span>{hukou}</span>
 				</div>
 				<div class="waiter7-picture">
-					<img src="" alt="">
+					{headImg}
 				</div>
 				<div class="waiter7-1">
 					<p>客户好评度：</p>
-					<img src="img/yudingayi/xx.png" alt="">
-					<img src="img/yudingayi/xx.png" alt="">
-					<img src="img/yudingayi/xx.png" alt="">
-					<img src="img/yudingayi/xx.png" alt="">
-					<img src="img/yudingayi/xx1.png" alt="">
+					{totalRateStar}
 				</div>
 				<div class="waiter7-1">
 					<p>准时到达率：</p>
-					<span>93%</span>
+					<span>{totalArrival}</span>
 				</div>
 				<div class="waiter7-1">
 					<p>个人介绍：</p>
-					<span>自信，耐心，勤奋</span>
+					<span>{intro}</span>
 				</div>
-				<div class="all-button14">预约她</div>
+				<div class="all-button14"><a href="#" onclick="reOrder({staffId})">预约她</a></div>
 				<div class="chongzhi5-kong1"></div>
 			</div>
 		</div>
+		
+		
 	</div>
 </div>
