--- a/jhj-web-user/order/order-old-man.html
+++ b/jhj-web-user/order/order-old-man.html
@@ -3,7 +3,7 @@
         <img src="img/wengjiajie/banner.png" alt="" class="all-img">
         <div class="beijing-index">
             <div class="shendu-bx">
-                <a href="order/order-hour-choose.html?service_type_id=#">
+                <a href="order/order-hour-choose.html?service_type_id=67">
                     <div class="all-button">立即预约</div>
                 </a>
                 <div class="shendu-bx-xd">
