--- a/jhj-web-user/user/charge/mine-charge-pay-success.html
+++ b/jhj-web-user/user/charge/mine-charge-pay-success.html
@@ -1,4 +1,4 @@
-<div data-page="charge-pay-success-page" class="page">
+<div data-page="mine-charge-pay-success" class="page">
     <div id="indexPageContentDiv" class="page-content" style="background:#fff;">
         <div class="beijing-index" style="background:#fff;">
             <img src="img/youhuiquan/23.png" alt="" style="width:40%;margin-left:30%;margin-top:50px;">
