--- a/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
+++ b/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
@@ -32,7 +32,7 @@
                     <p class="special-color1">温馨提示：</p>
                     <p class="special-color1">1.家务包月套餐中单次服务内容请参考<a href="order/order-hour-intro.html"
                                                                    style="font-size:14px;">金牌保洁</a></p>
-                    <p class="special-color1">2.包月套餐按照一月4次，每周1次的时间规律服务，不接受延期使用，请知晓</p>
+                    <p class="special-color1">2.包月套餐服务时间仅限周一到周三使用。</p>
                 </div>
 
                 <div class="shendu-bx">
