--- a/jhj-web-user/order/order-hour-choose.html
+++ b/jhj-web-user/order/order-hour-choose.html
@@ -4,6 +4,12 @@
 			<form id="orderHour-Form" class="store-data">
 				<input type="hidden" name="serviceType" id="serviceType" value="28">
 				<input type="hidden" id="addrId" name="addrId" value="">
+				<input type="hidden" id="maxServiceHour" name="maxServiceHour"" value="6">
+				<input type="hidden" id="minServiceHour" name="minServiceHour"" value="3">
+				<input type="hidden" id="price" name="price"" value="50">
+				<input type="hidden" id="mprice" name="mprice"" value="45">
+				<input type="hidden" id="pprice" name="pprice"" value="149">
+				<input type="hidden" id="mpprice" name="pprice"" value="135">
 				<div class="beijing-index">
 					<div class="waiter6" style="margin: 0;">
 						<div class="waiter6-1">
