--- a/jhj-web-user/html/order-my-pingjia.html
+++ b/jhj-web-user/html/order-my-pingjia.html
@@ -26,48 +26,93 @@
 					<div id="indexPageContentDiv" class="page-content">
 						
 						<div class="beijing-index">
-							<div class="waiter7" style="margin-top:15px;">
-								<div class="waiter7-2">
-									<p>服务员：</p>
-									<span>李久平</span>
+							<div class="waiter10">
+							<!-- 服务员可以点击进去 -->
+								<div class="waiter10-1">
+									<p>服务员：<span class="special-color2">李久平</span><span class="special-color2">田江涛</span><span class="special-color2">田江涛</span><span class="special-color2">田江涛</span><span class="special-color2">田江涛</span></p>
 								</div>
-								<div class="waiter7-2">
-									<p>服务项目：</p>
-									<span>金牌保洁</span>
-								</div>
-								<div class="waiter7-2">
-									<div class="waiter1">
-										<p style="padding:0;">到达时间：</p>
-										<span class="waiter1-1">准时</span>
-										<span class="waiter1-2">迟到</span>
+								<div class="waiter10-2">
+									<!-- 图片最多显示两张 -->
+									<div class="waiter10-2-1">
+										<img src="" alt="">
+									</div>
+									<div class="waiter10-2-1">
+										<img src="" alt="">
 									</div>
 								</div>
-								<div class="waiter7-picture1">
-									<img src="" alt="">
+								<ul class="waiter10-3">
+									<li>服务项目：<span>金牌保洁</span></li>
+									<li>服务时间：<span>2016-01-01</span></li>
+									<li>到达时间：<span class="waiter10-3-1">准时</span><span class="waiter10-3-2">迟到</span></li>
+									<li>服务态度：
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+									</li>
+									<li>服务技能：
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+									</li>
+									<li>服务评价：</li>
+									<p class="waiter10-3-3">服务不错，清洁了3小时，还送了半小时，整体感觉很好下次还预约。</p>
+								</ul>
+								<div class="chongzhi5-kong1"></div>
+								<div class="waiter10-4">
+									<div class="waiter10-4-1"><img src="" alt=""></div>
+									<div class="waiter10-4-1"><img src="" alt=""></div>
+									<div class="waiter10-4-1"><img src="" alt=""></div>
+									<div class="waiter10-4-1"><img src="" alt=""></div>
 								</div>
-								<div class="waiter7-2">
-									<p>服务态度：</p>
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx1.png" alt="">
+								<div class="chongzhi5-kong1"></div>
+							</div>
+
+
+							<div class="waiter10">
+								<div class="waiter10-1">
+									<p>服务员：<span class="special-color2">李久平</span><span class="special-color2">田江涛</span><span class="special-color2">田江涛</span><span class="special-color2">田江涛</span><span class="special-color2">田江涛</span></p>
 								</div>
-								<div class="waiter7-2">
-									<p>服务技能：</p>
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx.png" alt="">
-									<img src="../img/yudingayi/xx1.png" alt="">
+								<div class="waiter10-2">
+									<!-- 图片最多显示两张 -->
+									<div class="waiter10-2-1">
+										<img src="" alt="">
+									</div>
+									<div class="waiter10-2-1">
+										<img src="" alt="">
+									</div>
 								</div>
-								<div class="waiter7-2">
-									<p>服务评价：</p>
-									<!-- <span>自信，耐心，勤奋</span> -->
-									<p style="width:65%;word-wrap:break-word;line-height:1em;margin-top:10px;">11111111111111111111111111111111111111</p>
-									
+								<ul class="waiter10-3">
+									<li>服务项目：<span>金牌保洁</span></li>
+									<li>服务时间：<span>2016-01-01</span></li>
+									<li>到达时间：<span class="waiter10-3-1">准时</span><span class="waiter10-3-2">迟到</span></li>
+									<li>服务态度：
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+									</li>
+									<li>服务技能：
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+										<img src="../img/yudingayi/xx1.png" alt="">
+									</li>
+									<li>服务评价：</li>
+									<p class="waiter10-3-3">服务不错，清洁了3小时，还送了半小时，整体感觉很好下次还预约。</p>
+								</ul>
+								<div class="chongzhi5-kong1"></div>
+								<div class="waiter10-4">
+									<div class="waiter10-4-1"><img src="" alt=""></div>
+									<div class="waiter10-4-1"><img src="" alt=""></div>
+									<div class="waiter10-4-1"><img src="" alt=""></div>
+									<div class="waiter10-4-1"><img src="" alt=""></div>
 								</div>
-								<!-- 下面这段代码必须有 -->
 								<div class="chongzhi5-kong1"></div>
 							</div>
 
