--- a/jhj-web-user/html/order-waiter-pingjia.html
+++ b/jhj-web-user/html/order-waiter-pingjia.html
@@ -60,15 +60,20 @@
 							<div class="waiter3">
 								<div class="waiter3-1">
 									<img src="../img/yudingayi/picture.png" alt="">
-									<p>添加删除图片</p>
+									<div class="waiter3-1-1">
+										添加删除图片<input type="file" style="display:none;">
+									</div>
 								</div>
 							</div>
 							<div class="waiter4">
-								<div class="waiter4-1">+</div>
-								<div class="waiter4-1">+</div>
-								<div class="waiter4-1">+</div>
-								<div class="waiter4-1">+</div>
-								<div class="waiter4-1">+</div>
+								<div class="waiter4-1"><img src="" alt=""></div>
+								<div class="waiter4-2">×</div>
+								<div class="waiter4-1"><img src="" alt=""></div>
+								<div class="waiter4-2">×</div>
+								<div class="waiter4-1"><img src="" alt=""></div>
+								<div class="waiter4-2">×</div>
+								<div class="waiter4-1"><img src="" alt=""></div>
+								<div class="waiter4-2">×</div>
 
 							</div>
 							<div class="waiter5">
