---添加我的评论

--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -41,6 +41,13 @@
 								<li>关于我们</li>
 								<li>〉</li>
 							</ul>
+							<a href="order/order-user-rate.html">
+							<ul id="mine-evaluate">
+								<li><img src="img/order-my/my-5.png" alt=""></li>
+								<li>我的评论</li>
+								<li>〉</li>
+							</ul>
+							</a>
 							<ul id="mine-issue">
 								<li><img src="img/order-my/my-6.png" alt=""></li>
 								<li>常见问题</li>
