--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -236,5 +236,7 @@
 	<script type="text/javascript" src="js/order/fiveservice/qiyefuwu.js"></script>
 	<!-- 我的 余额  消费明细 -->
 	<script type="text/javascript" src="js/user/mine-rest-money-detail.js"></script>
+	<!-- 我的评论 -->
+	<script type="text/javascript" src="js/order/order-user-rate.js"></script>
 </body>
 </html>
