--- a/jhj-web-user/html/order-old-anjubao.html
+++ b/jhj-web-user/html/order-old-anjubao.html
@@ -32,12 +32,12 @@
 											<div class="shendu-bx-xd">
 												<ul class="shendu-bx-xd1">
 													<li>类别</li>
-													<li>促销价</li>
-													<li>会员价</li>
+													<li>原价</li>
+													<li>折扣价</li>
 												</ul>
 												
 												<ul class="shendu-bx-xd11">
-													<li>安居宝</li>
+													<li>金牌保洁</li>
 													<li>199元/3小时</li>
 													<li>149元/3小时</li>
 												</ul>
