---修改我的评价

--- a/jhj-web-user/order/order-user-rate.html
+++ b/jhj-web-user/order/order-user-rate.html
@@ -4,7 +4,8 @@
          	<div id="order-user-rate" class="waiter10" >
          	
          	</div>
-         	
+         	<div class="all-button5" id="order-list-more" style="display:none">加载更多</div>
+			<input type="hidden" id="page" name="page" value="1" />
             <div id="order-user-rate-temp" class="waiter10" style="display:none;">
                 <div class="waiter10-1">
                     <p>服务员：{staff_name}</p>
