-- 指定预约人员

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -213,6 +213,7 @@
 	<script type="text/javascript" src="js/order/order-list.js"></script>
 	<script type="text/javascript" src="js/order/order-rate.js"></script>
 	<script type="text/javascript" src="js/order/order-rate-success.js"></script>
+	<script type="text/javascript" src="js/order/order-appoint.js"></script>
 	<!-- 支付 -->
 	<script type="text/javascript" src="js/order/order-pay.js"></script>
 	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
