--- a/jhj-web-user/order/order-rate.html
+++ b/jhj-web-user/order/order-rate.html
@@ -2,18 +2,18 @@
 <div data-page="order-rate" class="page">
 	<div id="indexPageContentDiv" class="page-content">
 		<form id="orderRateForm" enctype="multipart/form-data">
-			<input type="hidden" id="orderId" value="0" />
+			<input type="hidden" id="orderId"  name="orderId" value="0" />
 			<div class="beijing-index">
 				<div class="waiter">
 					<p>服务员：</p>
 					<span id="staffNameStr"></span>
-					<input type="hidden" id="staffId" value="0" />
+					<input type="hidden" id="staffId" name="staffId" value="0" />
 				</div>
 				<div class="waiter1">
 					<p>到达时间：</p>
 					<span class="waiter1-1" id="rateArrival_0" onclick="doRateArrival(0)">准时</span>
 					<span class="waiter1-2" id="rateArrival_1" onclick="doRateArrival(1)">迟到</span>
-					<input type="hidden" id="rateArrival" value="0" />
+					<input type="hidden" id="rateArrival"  name="rateArrival" value="0" />
 				</div>
 				<div class="waiter1">
 					<p>服务态度：</p>
@@ -22,7 +22,7 @@
 					<img src="img/yudingayi/xx.png" id="rateAttitude_3" onclick="doRateAttitude(3)">
 					<img src="img/yudingayi/xx1.png" id="rateAttitude_4" onclick="doRateAttitude(4)">
 					<img src="img/yudingayi/xx1.png" id="rateAttitude_5" onclick="doRateAttitude(5)">
-					<input type="hidden" id="rateAttitude" vaue="3" />
+					<input type="hidden" id="rateAttitude"  name="rateAttitude" vaue="3" />
 				</div>
 				<div class="waiter1">
 					<p>服务技能：</p>
@@ -31,7 +31,7 @@
 					<img src="img/yudingayi/xx.png" id="rateSkill_3" onclick="doRateSkill(3)">
 					<img src="img/yudingayi/xx1.png" id="rateSkill_4" onclick="doRateSkill(4)">
 					<img src="img/yudingayi/xx1.png" id="rateSkill_5" onclick="doRateSkill(5)">
-					<input type="hidden" id="rateSkill" vaue="3" />
+					<input type="hidden" id="rateSkill" name="rateSkill" vaue="3" />
 				</div>
 				<div class="waiter1">
 					<p>服务评价：</p>
