--- a/jhj-web-user/html/order-pay-rili.html
+++ b/jhj-web-user/html/order-pay-rili.html
@@ -26,20 +26,22 @@
 					<div id="indexPageContentDiv" class="page-content">
 						
 						<div class="beijing-index">
-							<div class="waiter6" style="margin:0;">
-								<div class="waiter6-1">
+							<div class="waiter11" style="margin:0;">
+								<div class="waiter11-1">
 									<img src="../img/yudingayi/waiter-1.png" alt="">
-									<div class="waiter6-1-1">预约服务人员数量</div>
+									<div class="waiter11-1-1">预约服务人员数量</div>
 									<span>－</span>
 									<input type="text" value="0">
-									<span>＋</span>位
+									<span>＋</span>
+									<span>位</span>
 								</div>
-								<div class="waiter6-1">
+								<div class="waiter11-1">
 									<img src="../img/yudingayi/waiter-2.png" alt="">
-									<div class="waiter6-1-1">预约服务时间</div>
+									<div class="waiter11-1-1">预约服务时间</div>
 									<span>－</span>
 									<input type="text" value="0">
-									<span>＋</span>小时
+									<span>＋</span>
+									<span>小时</span>
 								</div>
 							</div>
 							<div class="waiter9">金额：<span>500元</span></div>
