--- a/jhj-web-user/html/order-waiter-yuding.html
+++ b/jhj-web-user/html/order-waiter-yuding.html
@@ -41,7 +41,7 @@
 								<li class="waiter6-1">擦玻璃</li>
 								<li class="waiter6-1">冰箱清洗</li>
 								<li class="waiter6-1">空调清洗</li>
-								<li class="waiter6-1">厨卫深度清洁</li>
+								<li class="waiter6-1">厨卫高温消毒杀菌</li>
 								<li class="waiter6-1">洗衣机清洗</li>
 								<li class="waiter6-1">床品除螨杀菌</li>
 								<li class="waiter6-1">房屋大扫除</li>
@@ -52,6 +52,7 @@
 								<li class="waiter6-1">安居宝</li>
 								<li class="waiter6-1">厨娘烧饭</li>
 								<li class="waiter6-1">家务包月</li>
+								<div class="chongzhi5-kong1"></div>
 								
 							</ul>
 							<div class="all-button2">确定</div>
