---服务人员名称中添加链接

--- a/jhj-web-user/order/order-appoint.html
+++ b/jhj-web-user/order/order-appoint.html
@@ -18,7 +18,7 @@
 				{{#each data}}
 				<li class="waiter6-1" onclick="appoinSerivceType($$(this), {{service_type_id}})">{{service_type_name}}</li>
 				{{/each}}
-				
+				<div class="chongzhi5-kong1"></div>
 				
 			</ul>
 			<div class="all-button2" onclick="doAppointOrder()">确定</div>
