--- a/jhj-web-user/order/order-view-0.html
+++ b/jhj-web-user/order/order-view-0.html
@@ -37,7 +37,8 @@
 							<li>服务人员：</li>
 							<li>
 							{{#each order_dispatchs}}
-								<a href="order/order-rate-staff.html?staff_id={{staff_id}}"/>{{staff_name}}</a>&nbsp;
+								<a href="order/order-rate-staff.html?staff_id={{staff_id}}" style="font-size:14px;
+								">{{staff_name}}</a>&nbsp;
 							{{/each}}
 							</li>
 						</ul>
