--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -34,7 +34,7 @@
 									<div class="mincircle-one">
 										<p>金牌保洁</p>
 										<p>首单立减10元</p>
-										<p></p>
+										<p>会员享专属优惠</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-1.png" alt="">
