--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -31,6 +31,7 @@
 									<div class="mincircle-one">
 										<p>金牌保洁</p>
 										<p>首单立减10元</p>
+										<p>会员享专属优惠</p>
 										<p></p>
 									</div>
 									<div class="mincircle-two">
