--- a/jhj-web-user/order/order-user-rate.html
+++ b/jhj-web-user/order/order-user-rate.html
@@ -22,7 +22,7 @@
                     <li>到达时间：{rate_arrival}</li>
                     <li>服务态度：{rate_attitude}</li>
                     <li>服务技能：{rate_skill}</li>
-                    <li>服务评价：</li>{rate_content}
+                    <li>服务评价：</li><p>{rate_content}</p>
                 </ul>
                 <div class="chongzhi5-kong1"></div>
                 <div class="waiter10-4">
