--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -11,7 +11,7 @@
                         <ul class="chongzhi5-{{@index+1}}-2">
                             <li>充值即刻成为金牌会员</li>
                             <li>赠</li>
-                            <li>{{send_money}}元优惠券</li>
+                            <li>{{send_money}}元现金优惠券</li>
                         </ul>
                         <div class="chongzhi5-{{@index+1}}-3">
                             <a href="#" class="charge-way">
