--- a/jhj-web-user/html/order-jinpai.html
+++ b/jhj-web-user/html/order-jinpai.html
@@ -60,29 +60,31 @@
 									<div class="shendu-title-1"></div>
 									<p>参考时间</p>
 								</div>
-								<div class="shendu-cankaotime">
-									<div class="shendu-cankaotime1">建筑面积(㎡)</div>
-									<div class="shendu-cankaotime2">参考时长(按单人次计算)</div>
-								</div>
-								<div class="shendu-cankaotime">
-									<div class="shendu-cankaotime11">60平米内</div>
-									<div class="shendu-cankaotime22">3小时起</div>
-								</div>
-								<div class="shendu-cankaotime">
-									<div class="shendu-cankaotime11">60-90平米</div>
-									<div class="shendu-cankaotime22">3-4小时起</div>
-								</div>
-								<div class="shendu-cankaotime">
-									<div class="shendu-cankaotime11">90-120平米</div>
-									<div class="shendu-cankaotime22">4-5小时起</div>
-								</div>
-								<div class="shendu-cankaotime">
-									<div class="shendu-cankaotime11">120-140平米</div>
-									<div class="shendu-cankaotime22">5-6小时起</div>
-								</div>
-								<div class="shendu-cankaotime">
-									<div class="shendu-cankaotime11">140平米以上</div>
-									<div class="shendu-cankaotime22">6小时以上</div>
+								<div class="cankaotime-box">
+									<div class="shendu-cankaotime">
+										<div class="shendu-cankaotime1">建筑面积(㎡)</div>
+										<div class="shendu-cankaotime2">参考时长(按单人次计算)</div>
+									</div>
+									<div class="shendu-cankaotime">
+										<div class="shendu-cankaotime11">60平米内</div>
+										<div class="shendu-cankaotime22">3小时起</div>
+									</div>
+									<div class="shendu-cankaotime">
+										<div class="shendu-cankaotime11">60-90平米</div>
+										<div class="shendu-cankaotime22">3-4小时起</div>
+									</div>
+									<div class="shendu-cankaotime">
+										<div class="shendu-cankaotime11">90-120平米</div>
+										<div class="shendu-cankaotime22">4-5小时起</div>
+									</div>
+									<div class="shendu-cankaotime">
+										<div class="shendu-cankaotime11">120-140平米</div>
+										<div class="shendu-cankaotime22">5-6小时起</div>
+									</div>
+									<div class="shendu-cankaotime">
+										<div class="shendu-cankaotime11">140平米以上</div>
+										<div class="shendu-cankaotime22">6小时以上</div>
+									</div>
 								</div>
 								<p class="special-color1" style="clear:both;">温馨提示：</p>
 								<p class="special-color1">1.参考时间与居室物品数量，清洁程度有关具体以实际情况为准</p>
